--- a/header.html
+++ b/header.html
@@ -1,2 +1,6 @@
 <meta charset="utf-8" />
 <link rel="stylesheet" href="modest.css">
+<title>Ebisu</title>
+<link rel="stylesheet" href="styles/atom-one-dark.css">
+<script src="highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
