Adding meta tags

--- a/header.html
+++ b/header.html
@@ -1,6 +1,14 @@
 <meta charset="utf-8" />
-<link rel="stylesheet" href="modest.css">
 <title>Ebisu</title>
+<meta name="description" content="Public-domain library for quiz scheduling with Bayesian statistics." />
+<meta name="twitter:card" value="summary">
+<meta property="og:title" content="Ebisu" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="https://fasiha.github.io/ebisu/" />
+<meta property="og:image" content="https://fasiha.github.io/ebisu/figures/pidelta.png" />
+<meta property="og:description" content="Public-domain library for quiz scheduling with Bayesian statistics." />
+
+<link rel="stylesheet" href="modest.css">
 <link rel="stylesheet" href="styles/atom-one-dark.css">
 <script src="highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
