--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                             min-height: 0;
                             width: 100%
                             }</style></head><body><h1>Ebisu: intelligent quiz scheduling</h1>
+<h2>Important links</h2>
+<ul>
+<li><a href="https://fasiha.github.io/ebisu/">Literate document</a></li>
+<li><a href="https://github.com/fasiha/ebisu">GitHub repo</a></li>
+<li><a href="https://pypi.python.org/pypi/ebisu/0.1">PyPI package</a></li>
+</ul>
 <h2>Introduction</h2>
 <p>Given a set of facts that a student is memorizing,</p>
 <ul>
@@ -156,7 +162,8 @@
 <li>And finally, the source code itself, annotated and explained. If you want to hack on Ebisu’s code, this is the section for you.</li>
 </ol>
 <h2>TL;DR</h2>
-<p>Setup instructions go here</p>
+<p>Install the Python library with <code>pip3 install ebisu</code> (or <code>pip install ebisu</code> if you only have Python3 🤠).</p>
+<p>Coming soon: API.</p>
 <h2>The math</h2>
 <p>Let’s begin with a quiz. One way or another, we’ve picked a fact to quiz the student on, <span class="mjpage"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="0.84ex" height="2.009ex" style="vertical-align: -0.338ex;" viewBox="0 -719.6 361.5 865.1" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-5-Title">
 <title id="MathJax-SVG-5-Title">t</title>
