Adding link to IPython Notebook crash course

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <ul>
 <li><a href="https://fasiha.github.io/ebisu/">Literate document</a></li>
 <li><a href="https://github.com/fasiha/ebisu">GitHub repo</a></li>
+<li><a href="https://github.com/fasiha/ebisu/blob/gh-pages/EbisuHowto.ipynb">IPython Notebook crash course</a></li>
 <li><a href="https://pypi.python.org/pypi/ebisu/">PyPI package</a></li>
 </ul>
 <h2>Introduction</h2>
@@ -163,7 +164,7 @@
 </ol>
 <h2>TL;DR</h2>
 <p>Install the Python library with <code>pip3 install ebisu</code> (or <code>pip install ebisu</code> if you only have Python3 🤠).</p>
-<p>Coming soon: API.</p>
+<p>Coming soon: API docs. In the meantime, please see this <a href="https://github.com/fasiha/ebisu/blob/gh-pages/EbisuHowto.ipynb">IPython Notebook crash course</a>.</p>
 <h2>The math</h2>
 <p>Let’s begin with a quiz. One way or another, we’ve picked a fact to quiz the student on, <span class="mjpage"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="0.84ex" height="2.009ex" style="vertical-align: -0.338ex;" viewBox="0 -719.6 361.5 865.1" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-5-Title">
 <title id="MathJax-SVG-5-Title">t</title>
