mjpage bakes highlight.js server-side

--- a/header.html
+++ b/header.html
@@ -5,10 +5,10 @@
 <meta property="og:title" content="Ebisu" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://fasiha.github.io/ebisu/" />
-<meta property="og:image" content="https://fasiha.github.io/ebisu/figures/pidelta.png" />
+<meta property="og:image" content="https://fasiha.github.io/ebisu/figures/halflife.png" />
 <meta property="og:description" content="Public-domain library for quiz scheduling with Bayesian statistics." />
 
 <link rel="stylesheet" href="modest.css">
 <link rel="stylesheet" href="styles/atom-one-dark.css">
-<script src="highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<script src="highlight.pack.js"></script> <!--HLJS_CLIENTSIDE-->
+<script>hljs.initHighlightingOnLoad();</script> <!--HLJS_CLIENTSIDE-->
