Fix error in nonlinear transform math

--- a/index.html
+++ b/index.html
@@ -724,8 +724,8 @@ plt.show()</code></pre>
  <use transform="scale(0.707)" xlink:href="#MJMATHI-3B4" x="809" y="513"></use>
 </g>
 </g>
-</svg></span> be the forward transform, so <span class="mjpage"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="13.45ex" height="3.176ex" style="vertical-align: -0.838ex;" viewBox="0 -1006.6 5791 1367.4" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-58-Title">
-<title id="MathJax-SVG-58-Title">g^{-1}(y) = x^{1/δ}</title>
+</svg></span> be the forward transform, so <span class="mjpage"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="13.281ex" height="3.176ex" style="vertical-align: -0.838ex;" viewBox="0 -1006.6 5718.2 1367.4" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-58-Title">
+<title id="MathJax-SVG-58-Title">g^{-1}(y) = y^{1/δ}</title>
 <g stroke="currentColor" fill="currentColor" stroke-width="0" transform="matrix(1 0 0 -1 0 0)" aria-hidden="true">
  <use xlink:href="#MJMATHI-67" x="0" y="0"></use>
 <g transform="translate(481,362)">
@@ -737,8 +737,8 @@ plt.show()</code></pre>
  <use xlink:href="#MJMAIN-29" x="2372" y="0"></use>
  <use xlink:href="#MJMAIN-3D" x="3040" y="0"></use>
 <g transform="translate(4096,0)">
- <use xlink:href="#MJMATHI-78" x="0" y="0"></use>
-<g transform="translate(572,362)">
+ <use xlink:href="#MJMATHI-79" x="0" y="0"></use>
+<g transform="translate(499,362)">
  <use transform="scale(0.707)" xlink:href="#MJMAIN-31" x="0" y="0"></use>
  <use transform="scale(0.707)" xlink:href="#MJMAIN-2F" x="500" y="0"></use>
  <use transform="scale(0.707)" xlink:href="#MJMATHI-3B4" x="1001" y="0"></use>
