Move CSS and JS into assets/

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 <meta property="og:url" content="https://fasiha.github.io/ebisu/">
 <meta property="og:image" content="https://fasiha.github.io/ebisu/figures/halflife.png">
 <meta property="og:description" content="Public-domain library for quiz scheduling with Bayesian statistics.">
-
-<link rel="stylesheet" href="modest.css">
-<link rel="stylesheet" href="styles/atom-one-dark.css">
+<link rel="stylesheet" href="assets/modest.css">
+<link rel="stylesheet" href="assets/atom-one-dark.css">
 <style type="text/css">
                             .mjpage .MJX-monospace {
                             font-family: monospace
