--- a/header.html
+++ b/header.html
@@ -7,8 +7,7 @@
 <meta property="og:url" content="https://fasiha.github.io/ebisu/" />
 <meta property="og:image" content="https://fasiha.github.io/ebisu/figures/halflife.png" />
 <meta property="og:description" content="Public-domain library for quiz scheduling with Bayesian statistics." />
-
-<link rel="stylesheet" href="modest.css">
-<link rel="stylesheet" href="styles/atom-one-dark.css">
-<script src="highlight.pack.js"></script> <!--HLJS_CLIENTSIDE-->
+<link rel="stylesheet" href="assets/modest.css">
+<link rel="stylesheet" href="assets/atom-one-dark.css">
+<script src="assets/highlight.pack.js"></script> <!--HLJS_CLIENTSIDE-->
 <script>hljs.initHighlightingOnLoad();</script> <!--HLJS_CLIENTSIDE-->
