--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <li><a href="#table-of-contents">Table of contents</a></li>
 </ul></li>
 <li><a href="#introduction">Introduction</a></li>
-<li><a href="#tldr">TL;DR</a></li>
+<li><a href="#quickstart">Quickstart</a></li>
 <li><a href="#how-it-works">How it works</a></li>
 <li><a href="#the-math">The math</a>
 <ul>
@@ -137,23 +137,19 @@
 <li>JavaScript, or a compiled-to-JavaScript language, for browsers, and</li>
 <li>PostgreSQL.</li>
 </ul>
-<p>The next section, the <a href="#tldr">TL;DR</a>, is a quick guide to setup and usage. See this if you know you want to use Ebisu in your app.</p>
+<p>The next section is a <a href="#quickstart">Quickstart</a> guide to setup and usage. See this if you know you want to use Ebisu in your app.</p>
 <p>Then in the <a href="#how-it-works">How It Works</a> section, I contrast Ebisu to other scheduling algorithms and describe, non-technically, why you should use it.</p>
 <p>Then there’s a long <a href="#the-math">Math</a> section that details Ebisu’s algorithm mathematically. if you like Beta-distributed random variables, conjugate priors, and marginalization, this is for you. If not, you’ll find the formulas to implement <code>predictRecall</code> and <code>updateRecall</code>.</p>
 <blockquote>
 <p>Nerdy details in a nutshell: Ebisu posits a <a href="https://en.wikipedia.org/wiki/Beta_distribution">Beta prior</a> on recall probabilities. As time passes, the recall probability decays exponentially, and Ebisu handles that nonlinearity exactly and analytically—it requires only a few <a href="http://mathworld.wolfram.com/GammaFunction.html">gamma function</a> evaluations to predict the current recall probability. A <em>quiz</em> is modeled as a <a href="%5BBernoulli%20experiment%5D(https://en.wikipedia.org/wiki/Bernoulli_distribution)">Bernoulli trial</a>, whose underlying probability prior is this non-conjugate nonlinearly-transformed Beta. Ebisu approximates the true non-standard posterior with a new Beta distribution by matching its mean and variance. This mean and variance are analytically tractable, and again require a few evaluations of the gamma function.</p>
 </blockquote>
 <p>Finally, the <a href="#source-code">Source Code</a> section presents the literate source of the library.</p>
-<h2 id="tldr">TL;DR</h2>
-<p>Install the Python library with <code>pip3 install ebisu</code> (or <code>pip install ebisu</code> if you only have Python3 🤠—just joking, it works on Python2 also).</p>
-<p>For a conversational introduction to the API in the context of a mocked quiz app, see this <a href="https://github.com/fasiha/ebisu/blob/gh-pages/EbisuHowto.ipynb">IPython Notebook crash course</a>.</p>
-<p>The API revolves around using and transforming a model of a prior distribution on a fact’s recall probability after a specific amount of time has elapsed since it was studied. Create a default prior model for use with all newly learned facts via <code>ebisu.defaultModel</code>. Then, the critical two functions provided are:</p>
-<ul>
-<li><code>predictRecall(prior: tuple, tnow: float) -&gt; float</code>, where <code>prior</code> is the object (a tuple) modeling the prior on this fact’s recall probability, and <code>tnow</code> is the time elapsed since this fact’s last review. The fact’s expected recall probability is returned.</li>
-<li><code>updateRecall(prior: tuple, result: bool, tnow: float) -&gt; tuple</code> produces a new prior model given the result of a quiz (true if successful, false if unsuccessful) and the time between this quiz and the previous one on the same fact.</li>
-</ul>
-<p>So your quiz app will store a <code>prior</code> model for each fact. Run <code>predictRecall</code> on all the facts being learned to see which is most in danger of being forgotten: it’ll be the fact with the smallest returned value. Then after you quiz on that fact, use <code>updateRecall</code> and update that fact’s prior model. Repeat this indefinitely.</p>
-<p>(In order to work seamlessly with Python2, this library does not use <a href="https://www.python.org/dev/peps/pep-0484/">PEP 484</a> type hints.)</p>
+<h2 id="quickstart">Quickstart</h2>
+<p><strong>Install</strong> <code>pip3 install ebisu</code> (or <code>pip install ebisu</code> if you only have Python3 🤠—just joking, it works on Python2 also).</p>
+<p><strong>Data model</strong> For each fact in your quiz app, you store a model representing a prior distribution. This is a 3-tuple: <code>(alpha, beta, t)</code> and you can create a default model for all newly learned facts with <code>ebisu.defaultModel</code>. (As detailed in the <a href="#choice-of-initial-model-parameters">Choice of initial model parameters</a> section, <code>alpha</code> and <code>beta</code> define a Beta distribution on this fact’s recall probability <code>t</code> time units after it’s most recent review.)</p>
+<p><strong>Predict a fact’s current recall probability</strong> <code>ebisu.predictRecall(prior: tuple, tnow: float) -&gt; float</code> where <code>prior</code> is this fact’s model, <code>tnow</code> is the current time elapsed since this fact’s most recent review, and the returned value is a probability between 0 and 1.</p>
+<p><strong>Update a fact’s model with quiz results</strong> <code>ebisu.updateRecall(prior: tuple, result: bool, tnow: float) -&gt; tuple</code> where <code>prior</code> and <code>tnow</code> are as above, and where <code>result</code> is true if the student successfully answered the quiz, false otherwise. The returned value is this fact’s new prior model—the old one can be discarded.</p>
+<p><strong>IPython Notebook crash course</strong> For a conversational introduction to the API in the context of a mocked quiz app, see this <a href="https://github.com/fasiha/ebisu/blob/gh-pages/EbisuHowto.ipynb">IPython Notebook crash course</a>.</p>
 <h2 id="how-it-works">How it works</h2>
 <p>There are many scheduling schemes, e.g.,</p>
 <ul>
