pydoc-markdown yarn script for doc/doc.md

--- a/index.html
+++ b/index.html
@@ -3370,6 +3370,7 @@ plt.show()</code></pre>
 <li>nose for tests</li>
 </ul></li>
 <li><a href="http://pandoc.org">Pandoc</a></li>
+<li><a href="https://pypi.python.org/pypi/pydoc-markdown">pydoc-markdown</a></li>
 <li>JavaScript
 <ul>
 <li><a href="https://yarnpkg.com">Yarn</a>
