--- a/index.html
+++ b/index.html
@@ -136,11 +136,7 @@
 </ul>
 <p>Behind these two simple functions, Ebisu is using a simple yet powerful model of forgetting founded on Bayesian statistics.</p>
 <p>With this system, quiz applications can hopefully move away from “daily review piles” caused by less flexible scheduling algorithms. For instance, a student might have only five minutes to study today—an app using Ebisu can ensure that only the facts most in danger of being forgotten are reviewed. Apps can also provide an infinite stream of quizzes (nightmare!) for students that are cramming: Ebisu intelligently updates its estimate of memory even when over-reviewing.</p>
-<p>This document is a literate source: it contains a detailed mathematical description of the underlying algorithm as well as a Python implementation (requires Scipy and Numpy). I plan on porting the algorithm to at least:</p>
-<ul>
-<li>JavaScript, or a compiled-to-JavaScript language, for browsers, and</li>
-<li>PostgreSQL.</li>
-</ul>
+<p>This document is a literate source: it contains a detailed mathematical description of the underlying algorithm as well as a Python implementation (requires Scipy and Numpy). A separate JavaScript implementation, <a href="https://fasiha.github.io/ebisu.js/">Ebisu.js</a>, exists, and I plan on porting the algorithm to at least PostgreSQL also.</p>
 <p>The next section is a <a href="#quickstart">Quickstart</a> guide to setup and usage. See this if you know you want to use Ebisu in your app.</p>
 <p>Then in the <a href="#how-it-works">How It Works</a> section, I contrast Ebisu to other scheduling algorithms and describe, non-technically, why you should use it.</p>
 <p>Then there’s a long <a href="#the-math">Math</a> section that details Ebisu’s algorithm mathematically. if you like Beta-distributed random variables, conjugate priors, and marginalization, this is for you. If not, you’ll find the formulas to implement <code>predictRecall</code> and <code>updateRecall</code>.</p>
@@ -155,6 +151,7 @@
 <p><strong>Update a fact’s model with quiz results</strong> <code>ebisu.updateRecall(prior: tuple, result: bool, tnow: float) -&gt; tuple</code> where <code>prior</code> and <code>tnow</code> are as above, and where <code>result</code> is true if the student successfully answered the quiz, false otherwise. The returned value is this fact’s new prior model—the old one can be discarded.</p>
 <p><strong>IPython Notebook crash course</strong> For a conversational introduction to the API in the context of a mocked quiz app, see this <a href="https://github.com/fasiha/ebisu/blob/gh-pages/EbisuHowto.ipynb">IPython Notebook crash course</a>.</p>
 <p><strong>Further information</strong> <a href="https://github.com/fasiha/ebisu/blob/gh-pages/doc/doc.md">Module docstrings</a> in a pinch but full details plus literate source below, under <a href="#source-code">Source code</a>.</p>
+<p><strong>Alternative implementations</strong> <a href="https://fasiha.github.io/ebisu.js/">Ebisu.js</a> is a JavaScript port for browser and Node.js.</p>
 <h2 id="how-it-works">How it works</h2>
 <p>There are many scheduling schemes, e.g.,</p>
 <ul>
