Minor latex typo

--- a/index.html
+++ b/index.html
@@ -1491,8 +1491,8 @@
 <g stroke="currentColor" fill="currentColor" stroke-width="0" transform="matrix(1 0 0 -1 0 0)" aria-hidden="true">
  <use xlink:href="#MJMATHI-74" x="0" y="0"></use>
 </g>
-</svg></span> and recover an updated Beta distribution: <span class="mjpage mjpage__block"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="29.234ex" height="3.009ex" style="vertical-align: -1.005ex;" viewBox="0 -863.1 12587 1295.7" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-106-Title">
-<title id="MathJax-SVG-106-Title">(p_t | x_{t_2} = 1) ∼ Beta(α+δ, β)</title>
+</svg></span> and recover an updated Beta distribution: <span class="mjpage mjpage__block"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="29.881ex" height="3.009ex" style="vertical-align: -1.005ex;" viewBox="0 -863.1 12865.5 1295.7" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-106-Title">
+<title id="MathJax-SVG-106-Title">(p_t | x_{t_2} = 1) ∼ Beta(α+δ, β).</title>
 <g stroke="currentColor" fill="currentColor" stroke-width="0" transform="matrix(1 0 0 -1 0 0)" aria-hidden="true">
  <use xlink:href="#MJMAIN-28" x="0" y="0"></use>
 <g transform="translate(389,0)">
@@ -1522,8 +1522,9 @@
  <use xlink:href="#MJMAIN-2C" x="11185" y="0"></use>
  <use xlink:href="#MJMATHI-3B2" x="11630" y="0"></use>
  <use xlink:href="#MJMAIN-29" x="12197" y="0"></use>
+ <use xlink:href="#MJMAIN-2E" x="12586" y="0"></use>
 </g>
-</svg></span>. To see why, just recall how we moved a <span class="mjpage"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="10.564ex" height="2.843ex" style="vertical-align: -0.838ex;" viewBox="0 -863.1 4548.2 1223.9" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-107-Title">
+</svg></span> To see why, just recall how we moved a <span class="mjpage"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="10.564ex" height="2.843ex" style="vertical-align: -0.838ex;" viewBox="0 -863.1 4548.2 1223.9" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-107-Title">
 <title id="MathJax-SVG-107-Title">Beta(α, β)</title>
 <g stroke="currentColor" fill="currentColor" stroke-width="0" transform="matrix(1 0 0 -1 0 0)" aria-hidden="true">
  <use xlink:href="#MJMATHI-42" x="0" y="0"></use>
