Pointer to HTML doc after first equation

--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
 </g>
 </svg></span></p>
 <blockquote>
+<p><strong>Aside 0</strong> If you see a gibberish above instead of a mathematical equation (it can be hard to tell the difference sometimes…), you’re probably reading this on GitHub instead of the <a href="https://fasiha.github.io/ebisu/#bernoulli-quizzes">main Ebisu website</a> which has typeset all equations with MathJax. Read this document <a href="https://fasiha.github.io/ebisu/#bernoulli-quizzes">there</a>.</p>
 <p><strong>Aside 1</strong> Notice that since <span class="mjpage"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="2.156ex" height="2.009ex" style="vertical-align: -0.671ex;" viewBox="0 -576.1 928.1 865.1" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-20-Title">
 <title id="MathJax-SVG-20-Title">x_t</title>
 <g stroke="currentColor" fill="currentColor" stroke-width="0" transform="matrix(1 0 0 -1 0 0)" aria-hidden="true">
