Acknowledge contributors and bug reporters

--- a/index.html
+++ b/index.html
@@ -3706,6 +3706,7 @@ plt.show()</code></pre>
 </ul>
 <p><strong>Implementation ideas</strong> Lua, Erlang, Elixir, Red, F#, OCaml, Reason, PureScript, JS, TypeScript, Rust, … Postgres (w/ or w/o GraphQL), SQLite, LevelDB, Redis, Lovefield, …</p>
 <h2 id="acknowledgments">Acknowledgments</h2>
+<p>A huge thank you to <a href="https://github.com/fasiha/ebisu/issues?utf8=%E2%9C%93&amp;q=is%3Aissue">bug reporters and math experts</a> and <a href="https://github.com/fasiha/ebisu/graphs/contributors">contributors</a>!</p>
 <p>Many thanks to <a href="https://stats.stackexchange.com/q/273221/31187">mxwsn and commenters</a> as well as <a href="https://stats.stackexchange.com/q/272834/31187">jth</a> for their advice and patience with my statistical incompetence.</p>
 <p>Many thanks also to Drew Benedetti for reviewing this manuscript.</p>
 <p>John Otander’s <a href="http://markdowncss.github.io/modest/">Modest CSS</a> is used to style the Markdown output.</p>
